--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,27 +3,32 @@ name = "cp-ikev1-proxy"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+path = "src/bin/main.rs"
+name = "cp-ikev1-proxy"
+
 [dependencies]
 tokio = { version = "1",  features = ["full"] }
 anyhow = "1"
 bytes = "1"
 isakmp = { git = "https://github.com/ancwrd1/isakmp.git" }
 tokio-util = { version = "0.7", features = ["codec"] }
-futures-util = "0.3.31"
+futures-util = "0.3"
 tracing = "0.1"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = "0.3"
 hyper = "1"
 hyper-util = { version = "0.1", features = ["full"] }
 http-body-util = "0.1"
-num-traits = "0.2.19"
-pest = "2.8.0"
-pest_derive = "2.8.0"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
+num-traits = "0.2"
+pest = "2"
+pest_derive = "2"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 enum-as-inner = "0.6"
 parse_int = "0.9"
-http = "1.3.1"
-httparse = "1.10.1"
+http = "1"
+httparse = "1"
 native-tls = "0.2"
 tokio-native-tls = "0.3"
-hex = "0.4.3"
+hex = "0.4"
+clap = { version = "4", features = ["derive"] }
