--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ isakmp = { git = "https://github.com/ancwrd1/isakmp.git" }
 tokio-util = { version = "0.7", features = ["codec"] }
 futures-util = "0.3"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 hyper = "1"
 hyper-util = { version = "0.1", features = ["full"] }
 http-body-util = "0.1"
